--- a/ais_web2/Webapi_Global/Global_api_service/Code/Model_Helper_famework/packages.config
+++ b/ais_web2/Webapi_Global/Global_api_service/Code/Model_Helper_famework/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.1.11" targetFramework="net48" />
-  <package id="EPPlus" version="7.0.0-rc1" targetFramework="net48" />
+  <package id="EPPlus" version="7.0.0" targetFramework="net48" />
   <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net48" />
   <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net48" />
   <package id="jose-jwt" version="4.1.0" targetFramework="net48" />
