--- a/ais_web2/work/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/ais_web2/work/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -835,6 +835,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="sweetalert2.js" />
+    <Content Include="text\loading-gif.gif" />
     <Content Include="text\TextFile1.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
