--- a/ais_web2/work/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/ais_web2/work/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -614,7 +614,10 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="sweetalert2.js" />
+    <Content Include="text\loading-gif.gif" />
     <Content Include="text\TextFile1.txt" />
+    <Content Include="text\tmc_logo.ico" />
+    <Content Include="text\tmc_logo.png" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
